<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">收哪儿</string>
    <string name="main_tab_space">空间</string>
    <string name="main_tab_look">查看</string>
    <string name="main_tab_remind">提醒</string>
    <string name="main_tab_me">我的</string>
    <string name="login_title">登录</string>
    <string name="login_trial">试用一下</string>
    <string name="login_phone_left_tx">一键登录</string>
    <string name="login_registe">新用户注册</string>
    <string name="registe_title_tx">注册</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="forget_pwd_title">重置密码</string>
    <string name="login_email">邮箱</string>
    <string name="login_email_pwd_hide">密码(密码长度为6-16位)</string>
    <string name="title_fg_me">个人中心</string>
    <string name="title_ac_person">个人信息</string>
    <string name="title_fg_space">空间</string>
    <string name="title_fg_look">物品</string>
    <string name="title_fg_remind">我的提醒</string>
    <string name="unbound_text">未绑定</string>
    <string name="loading_text">正在加载</string>
    <string name="login_phone_error_text">请输入正确的手机号</string>
    <string name="login_img_error_text">请输入图形验证码</string>
    <string name="login_code_error_text">请输入正确的验证码</string>
    <string name="old_error_text">请输入原密码</string>
    <string name="new_error_text">请输入新密码</string>
    <string name="password_error_text">新密码不能与原密码相同</string>

    <string name="remind_unfinish_text">未完成</string>
    <string name="remind_finished_text">已完成</string>
    <string name="finished_text">完成</string>
    <string name="remind_first_label_text">优先</string>
    <string name="remind_edit_finished_text">标记完成</string>
    <string name="edit_goods_location">标记位置</string>
    <string name="delete_text">删除</string>
    <string name="cancel_text">取消</string>
    <string name="no_more_data">没有更多数据了</string>

    <string name="permission_record">麦克风没有声音或被占用,请到手机的"设置-权限管理-收哪儿"打开所有权限</string>
    <string name="permission_sdcard">没有储存权限或拍照,请到手机的"设置-权限管理-收哪儿"打开所有权限</string>
    <string name="permission_xuanfu">没有悬浮窗口权限,请到手机的"设置-权限管理-收哪儿"打开所有权限</string>
    <string name="permission_capture">调用相机失败,请到手机的"设置-权限管理-收哪儿"打开所有权限</string>
    <!--二维码-->
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="msg_default_status">请将二维码置于屏幕中间(若光线暗请按音量的增加键)。</string>
    <string name="barcode_msg_fail">扫描失败！</string>
    <string name="scan_tips">将二维码图片对准扫描框即可自动扫描</string>
    <string name="confirm">确定</string>
    <string name="save">保存</string>
    <string name="scaning">扫描二维码</string>
    <string name="add_more_text">批量添加</string>
    <string name="add_goods_text">添加</string>
    <string name="add_goods_property">添加属性</string>
    <string name="add_more_goods_property">选择共同属性</string>

    <string name="room_object_count">%1$s个物品</string>
    <string name="definition_sort">自定义为“%1$s”分类</string>
    <string name="definition_energy">能量值%1$s</string>

    <string name="add_other_content_text">添加其他属性</string>
    <string name="base_content">基本属性</string>
    <string name="other_content">其他属性</string>
    <string name="reminds_content">提醒</string>
    <string name="location_content">位置信息</string>
    <string name="add_goods_sort">分类</string>
    <string name="hint_goods_name">名称</string>
    <string name="goods_text">物品</string>
    <string name="camera_text">拍照</string>
    <string name="photo_text">相册</string>
    <string name="scan_text">扫码导入</string>

    <string name="remind_title_text">我的提醒</string>
    <string name="add_remind_title_text">新建提醒</string>
    <string name="remind_details_title_text">提醒详情</string>
    <string name="remind_good_text">关联物品</string>
    <string name="remind_time_text">提醒时间</string>
    <string name="remind_first_text">优先处理</string>
    <string name="remind_overdue_time_text">重复提醒</string>
    <string name="remind_overdue_time_hint_text">开启后过期将每日提醒</string>
    <string name="remind_remarks_text">说明备注</string>
    <string name="title_text">标题</string>
    <string name="add_remind_et_hint_text">请输入标题</string>
    <string name="add_relation_et_hint_text">物品名称</string>
    <string name="add_family_et_hint_text">请输入家庭名称</string>
    <string name="act_title_relation">关联物品</string>
    <string name="add_remind_title_hint">请输入标题</string>
    <string name="add_remind_time_hint">请设置提醒时间</string>
    <string name="add_remind_time_hint_two">请重新设置提醒时间</string>
    <string name="remind_goods_name_text">名称: %1$s</string>
    <string name="remind_goods_classify_text">分类: %1$s</string>
    <string name="remind_goods_location_text">位置: %1$s</string>
    <string name="dialog_energy_num">能量值%1$s，是否补充</string>
    <string name="remind_remarks_title_text">说明备注</string>
    <string name="remind_remarks_hint_text">说明备注描述</string>
    <string name="goods_remarks_hint_text">其他描述</string>
    <string name="goods_remarks_title_text">其他</string>
    <string name="remind_remarks_num_text">%1$s/150</string>
    <string name="select_room">选择房间</string>
    <string name="pop_edit_furniture_name">编辑名称图片</string>
    <string name="pop_edit_interlayer">编辑隔层</string>
    <string name="pop_select_family">选择家庭</string>
    <string name="edit_room">空间编辑</string>
    <string name="add_room">添加空间</string>
    <string name="add_furniture">添加家具</string>
    <string name="edit_furniture">家具编辑</string>
    <string name="user_add_furniture">自定义家具</string>
    <string name="edit_text">编辑</string>
    <string name="stop_text">收起</string>
    <string name="edit_family">管理</string>
    <string name="edit_layer">编辑结构</string>
    <string name="edit_box">编辑收纳盒</string>
    <string name="layer_move">隔层迁移</string>
    <string name="layer_name">隔层名称</string>
    <string name="reset_name">重命名</string>
    <string name="add_box">添加收纳盒</string>
    <string name="add_family">添加新家庭</string>
    <string name="del_family">删除家庭</string>
    <string name="family_name">家庭名称</string>
    <string name="edit_family_name">编辑家庭名称</string>
    <string name="edit_rooms_name">自定义房间</string>
    <string name="shared_family">共享家庭</string>
    <string name="sharing">共享中...</string>
    <string name="add_shared_family">添加协作者</string>
    <string name="existing_rooms">现有房间</string>
    <string name="administer_family">家庭管理</string>
    <string name="administer_furniture">房间管理</string>
    <string name="look_more">查看更多</string>
    <string name="add_more">新增物品</string>
    <string name="administer_family_details">%1$s个房间 | %2$s件物品</string>
    <string name="furniture_number">%1$s个家具</string>
    <string name="user_family_name">%1$s的家</string>
    <string name="import_goods">归入物品</string>
    <string name="not_location_goods">未归位</string>
    <string name="not_name_goods">未定义</string>
    <string name="remove_text">迁移</string>
    <string name="edit_more_goods">批量编辑</string>
    <string name="open">展开全部</string>
    <string name="close">收起全部</string>
    <string name="message_title">消息中心</string>
    <string name="enetgy_msg_title">充值记录</string>
    <string name="commit_edit">确认修改</string>
    <string name="act_vip_buy_title">购买服务</string>
    <string name="shared_vip_buy_hint">*原价18元，已享6元优惠</string>
    <string name="shared_vip_buy_commit">优惠领取成功，立即¥12购买</string>
    <string name="not_categories_text">未分类</string>
    <string name="not_location_text">未归位</string>

    <string name="user_usid_text">ID: %1$s</string>
    <string name="hint_classify_tv">请选择物品分类子标签</string>
    <string name="hint_purchase_time_tv">请选择物品购买时间</string>
    <string name="hint_expiry_time_tv">请选择物品过期时间</string>
    <string name="hint_color_tv">请选择物品所属颜色</string>
    <string name="hint_season_tv">请选择物品所属季节</string>
    <string name="hint_belonger_tv">请选择归属人</string>
    <string name="hint_channel_tv">请选择物品购货渠道</string>
    <string name="hint_detail_tv">填写备注</string>
    <string name="add_remind_tv">添加提醒</string>
    <string name="add_belonger_tv">添加归属人</string>
    <string name="title_sort_customize_tv">自定义分类</string>
    <string name="customize_text">自定义</string>
    <string name="search_text">搜索</string>
    <string name="hint_delete_text">确认删除？</string>
    <string name="hint_rename_sort_text">分类名称</string>
    <string name="hint_delete_sort_child_text">删除此分类，会删掉\n其相关的所有子分类</string>
    <string name="hint_delete_sort_text">删除主分类将同时删除该主分\n类下创建的全部分类子标签，\n确认删除？</string>
    <string name="add_end_time_hint_text">到期时间已自动添加为提醒</string>
    <string name="goods_add_location">添加位置</string>
    <string name="goods_location">查看位置</string>
    <string name="goods_lock">封存</string>
    <string name="goods_top">置顶</string>
    <string name="goods_untop">取消置顶</string>
    <string name="goods_unlock">还原</string>
    <string name="seal_hint_one_tv">双击底栏“查看”图标可以进入暗格</string>
    <string name="seal_hint_two_tv">被封存的物品只在暗格中可以查看，不在位置和查看页显示</string>
    <string name="seal_hint_vip_tv">封存为高级账户功能,需内购升级才可试用</string>
    <string name="seal_buy_vip_btn">升级为高级账户</string>
    <string name="seal_cancel_vip_btn">移出暗格内物品,暂不升级</string>
    <string name="add_cangwang_hint_dialog_msg">已添加不少物品了,先去给他们定位吧</string>
    <string name="add_goods_location_hint">选择家具及隔层,放置物品,标记其位置</string>
    <string name="add_room_geceng_hint">新家具需创建家具内部隔层分布</string>
</resources>
