<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dip_115"
    android:layout_height="wrap_content"
    android:background="@drawable/home01_bg_card"
    android:orientation="vertical">

    <TextView
        android:id="@+id/menu_edit_goods_location_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_50"
        android:gravity="center"
        android:text="@string/edit_goods_location"
        android:textColor="@color/color333"
        android:textSize="@dimen/f_17" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/split_color" />

    <TextView
        android:id="@+id/menu_add_remind_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_50"
        android:gravity="center"
        android:text="@string/add_remind_tv"
        android:textColor="@color/color333"
        android:textSize="@dimen/f_17" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/split_color" />

    <TextView
        android:id="@+id/menu_lock_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_50"
        android:gravity="center"
        android:text="@string/goods_lock"
        android:textColor="@color/color333"
        android:textSize="@dimen/f_17" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/split_color" />

    <TextView
        android:id="@+id/menu_delete_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_50"
        android:gravity="center"
        android:text="@string/delete_text"
        android:textColor="@color/holo_red_light"
        android:textSize="@dimen/f_17" />


</LinearLayout>