<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dip_120"
    android:layout_height="@dimen/dip_150"
    android:background="@drawable/home01_bg_card"
    android:orientation="vertical"
    android:paddingStart="@dimen/dip_30"
    android:paddingEnd="@dimen/dip_30">


    <TextView
        android:id="@+id/edit_reset_name_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/edit_text"
        android:textColor="@color/color333"
        android:textSize="@dimen/f_17" />


    <TextView
        android:id="@+id/edit_remove_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/remove_text"
        android:textColor="@color/color333"
        android:textSize="@dimen/f_17" />

    <TextView
        android:id="@+id/edit_del_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/delete_text"
        android:textColor="@color/color333"
        android:textSize="@dimen/f_17" />
</LinearLayout>