<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dip_300"
    android:layout_height="@dimen/dip_180"
    android:background="@drawable/shape_white_r10dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:minHeight="@dimen/dip_180"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_msg_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dip_16"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/seal_hint_vip_tv"
        android:textColor="@color/color333"
        android:textSize="@dimen/f_17" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black_12" />

    <TextView
        android:id="@+id/msg_submit_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_42"
        android:background="@drawable/shape_white_r10dp"
        android:gravity="center"
        android:text="@string/seal_buy_vip_btn"
        android:textColor="@color/maincolor"
        android:textSize="@dimen/f_15" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black_12" />

    <TextView
        android:id="@+id/msg_cancel_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_42"
        android:background="@drawable/shape_white_r10dp"
        android:gravity="center"
        android:text="@string/seal_cancel_vip_btn"
        android:textColor="@color/maincolor"
        android:textSize="@dimen/f_15" />
</LinearLayout>
