<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dip_110"
    android:layout_height="@dimen/dip_220"
    android:background="@drawable/home01_bg_card"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/cancel_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_dismiss_dialog" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/split_color" />

    <TextView
        android:id="@+id/camera_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_40"
        android:gravity="center"
        android:text="@string/camera_text"
        android:textColor="@color/color333"
        android:textSize="@dimen/f_17" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/split_color" />


    <TextView
        android:id="@+id/photo_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_40"
        android:gravity="center"
        android:text="@string/photo_text"
        android:textColor="@color/color333"
        android:textSize="@dimen/f_17" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/split_color" />


    <TextView
        android:id="@+id/scan_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_40"
        android:gravity="center"
        android:text="@string/scan_text"
        android:textColor="@color/color333"
        android:textSize="@dimen/f_17" />
</LinearLayout>