<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_goods_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">


    <include layout="@layout/layout_title_all" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dip_18"
                android:layout_marginTop="@dimen/dip_10"
                android:layout_marginBottom="@dimen/dip_10"
                android:text="@string/base_content"
                android:textColor="@color/color999"
                android:textSize="@dimen/f_12" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dip_110"
                android:layout_marginStart="@dimen/dip_18"
                android:layout_marginEnd="@dimen/dip_18"
                android:background="@drawable/shape_remind_item_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.gongwu.wherecollect.view.GoodsImageView
                    android:id="@+id/add_img_view"
                    android:layout_width="@dimen/dip_76"
                    android:layout_height="@dimen/dip_76"
                    android:layout_marginStart="@dimen/dip_16"
                    android:scaleType="centerInside"
                    android:src="@drawable/icon_add_goods" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/goods_name_tv"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/dip_16"
                        android:paddingEnd="@dimen/dip_16"
                        android:text="@string/hint_goods_name"
                        android:textColor="@color/divider"
                        android:textSize="@dimen/f_15" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_marginStart="@dimen/dip_16"
                        android:background="@color/split_color" />

                    <TextView
                        android:id="@+id/add_goods_sort_tv"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/dip_16"
                        android:paddingEnd="@dimen/dip_16"
                        android:text="@string/add_goods_sort"
                        android:textColor="@color/divider"
                        android:textSize="@dimen/f_15" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dip_18"
                android:layout_marginTop="@dimen/dip_30"
                android:layout_marginBottom="@dimen/dip_10"
                android:text="@string/other_content"
                android:textColor="@color/color999"
                android:textSize="@dimen/f_12" />

            <com.gongwu.wherecollect.view.ObjectInfoLookView
                android:id="@+id/goodsInfo_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
